--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,15 @@
       "use":"@vercel/node"
     }
   ],
+  "rewrite":[
+    {
+      "src":"/(.*)",
+      "destination":"src/main.ts",
+      "methods":[
+        "GET","POST","PUT","DELETE"
+      ]
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
