--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,7 @@
   "rewrite":[
     {
       "src":"/(.*)",
-      "destination":"src/main.ts",
-      "methods":[
-        "GET","POST","PUT","DELETE"
-      ]
+      "destination":"src/main.ts"
     }
   ],
   "headers": [
