--- a/vercel.json
+++ b/vercel.json
@@ -8,17 +8,12 @@
   "rewrite":[
     {
       "src":"/(.*)",
-      "destination":"src/main.ts"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      "destination":"src/main.ts",
+      "has": [        
+        { "type": "header","key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "type": "header","key": "Access-Control-Allow-Origin", "value": "*" },
+        { "type": "header","key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "type": "header","key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
     }
   ]
