--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use":"@vercel/node"
     }
   ],
-  "rewrite":[
+  "rewrites":[
     {
       "src":"/(.*)",
       "destination":"src/main.ts",
