--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   ],
   "rewrites":[
     {
-      "src":"/(.*)",
+      "source":"/(.*)",
       "destination":"src/main.ts",
       "has": [        
         { "type": "header","key": "Access-Control-Allow-Credentials", "value": "true" },
