--- a/vercel.json
+++ b/vercel.json
@@ -5,15 +5,12 @@
       "use":"@vercel/node"
     }
   ],
-  "rewrites":[
+  "routes":[
     {
-      "source":"/(.*)",
-      "destination":"src/main.ts",
-      "has": [        
-        { "type": "header","key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "type": "header","key": "Access-Control-Allow-Origin", "value": "*" },
-        { "type": "header","key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "type": "header","key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      "src":"/(.*)",
+      "dest":"src/main.ts",
+      "methods":[
+        "GET","POST","PUT","DELETE"
       ]
     }
   ]
